adding views to add a new flow (TODO: bugfix when reloading a flow with existing field_types), starting to use darwinjs and bootstrap-select

--- a/config/config.yml
+++ b/config/config.yml
@@ -15,9 +15,9 @@ defaults: &defaults
     - checkbox
     - number
     - datetime
-    - file
-    - user
-    - objectlink
+    # - file
+    # - user
+    # - objectlink
 
   roles:
     - admin
