--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -78,5 +78,5 @@ production:
     default:
       uri: <%= ENV['MONGOHQ_URL'] %>
       options:
-        skip_version_check: true
-        safe: true
+        # skip_version_check: true
+        # safe: true
